--- a/login.html
+++ b/login.html
@@ -200,36 +200,34 @@
 							
 						},
 						type: "POST",
-						headers: {
-							"Content-Type": "application/json",
-							"Authorization": "Token e509c4a99d6e61e11db5535aa190c12cca2e7b4a"
-						},
 						success: function (response) {
 							console.log(response);
 							try {
-								var json = JSON.parse(response);
-								console.log(json);
-								var page = json.data.page;
-								if (json.statuscode == 200) {
-									var ret = {
-										sessionid: json.data.sessionid,
-										userid: json.data.userid,
-									};
+								// var json = JSON.parse(response);
+								// console.log(json);
+								// var page = json.data.page;
+								if (response.status == 200) {
+									// var ret = {
+									// 	sessionid: json.data.sessionid,
+									// 	userid: json.data.userid,
+									// };
 									// window.location.href = "dashboard/dist/index.html" + "?" + $.param(ret);
 									window.location.href = "admin/dist/index.html"
+									// console.log("michael")
+
 									// window.location.href = page + "?" + $.param(ret);
 								} else {
 									// $.unblockUI();
 									// callSweetMsg(json, "eCampus Portal", "error");
-									Swal.fire({
-										title: "ITA Portal",
-										html: json.status,
-										icon: "error",
-										buttonsStyling: true,
-										confirmButtonText: "Ok, got it!",
-										customClass: { confirmButton: "btn-sm btn-primary" },
-									});
-									$("#sign_in_submit").html("Log in to dashboard");
+									// Swal.fire({
+									// 	title: "ITA Portal",
+									// 	html: json.status,
+									// 	icon: "error",
+									// 	buttonsStyling: true,
+									// 	confirmButtonText: "Ok, got it!",
+									// 	customClass: { confirmButton: "btn-sm btn-primary" },
+									// });
+									// $("#sign_in_submit").html("Log in to dashboard");
 								}
 							} catch (e) {
 								console.log(e.message);
