--- a/index.html
+++ b/index.html
@@ -163,7 +163,10 @@
         </div>
         <!-- Header Section End -->
 
-      
+        <div id="page_content">
+            <h1 class="text-center">Hero section goes here</h1>
+        </div>
+
         <div class="footer-section section" style="background-color: #111; padding: 20px 0 30px;">
             <div class="container">
                 <!-- Footer Copyright Start -->
