--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="col-xl-3 col-auto">
                             <div class="header-logo">
                                 <a href="index.html">
-                                    <img class="dark-logo" src="landing/assets/pngwing.com (2).png" alt="">
+                                    <img class="dark-logo" src="landing/assets/pngwing.com (2).png" width="40px" alt="">
                                     <!-- <img class="dark-logo" src="landing/assets/images/logo/dark-logo.png" alt="Learts Logo">
                                     <img class="light-logo" src="landing/assets/images/logo/light-logo.png" alt="Learts Logo"> -->
                                 </a>
