--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Vaccine App</title>
+    <title>Vaccine System</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="Learn the latest technologies and master in-demand skills in a hands-on, learning environment led by expert instructors.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="landing/assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="landing/assets/pngwing.com (2).png">
 
     <!-- CSS
 	============================================ -->
@@ -93,17 +93,17 @@
                             <nav class="site-main-menu menu-hover-1">
                                 <ul>
                                     <li>
-                                        <a href="#" onclick="showAjax('', 'courses.html', 'page_content')">
+                                        <a href="#" onclick="showAjax('', '', 'page_content')">
                                             <span class="menu-text">Hospital</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" onclick="showAjax('', 'about.html', 'page_content')">
+                                        <a href="#" onclick="showAjax('', '', 'page_content')">
                                             <span class="menu-text">Clinic</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#" onclick="showAjax('', 'faq.html', 'page_content')">
+                                        <a href="#" onclick="showAjax('', '', 'page_content')">
                                             <span class="menu-text">Covid</span>
                                         </a>
                                     </li>
