--- a/login.html
+++ b/login.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<!--begin::Head-->
 	<head>
-    	<title>ITA | Login</title>
+    	<title>Vaccine System | Login</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Learn the latest technologies and master in-demand skills in a hands-on, learning environment led by expert instructors.">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--begin::Fonts-->
-    	<link rel="shortcut icon" type="image/x-icon" href="landing/assets/images/favicon.png">
+    	<link rel="shortcut icon" type="image/x-icon" href="landing/assets/pngwing.com (2).png">
 		<!--end::Fonts-->
 		<!--begin::Global Stylesheets Bundle(used by all pages)-->
 		<link href="dashboard/dist/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
