--- a/signup.html
+++ b/signup.html
@@ -3,13 +3,13 @@
 <!--begin::Head-->
 
 <head>
-	<title>ITA | Sign up</title>
+	<title>Vaccine System | Sign up</title>
 	<meta charset="utf-8" />
 	<meta name="description"
 		content="Learn the latest technologies and master in-demand skills in a hands-on, learning environment led by expert instructors.">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--begin::Fonts-->
-	<link rel="shortcut icon" type="image/x-icon" href="landing/assets/images/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="landing/assets/pngwing.com (2).png">
 	<!--end::Fonts-->
 	<!--begin::Global Stylesheets Bundle(used by all pages)-->
 	<link href="dashboard/dist/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
@@ -325,11 +325,8 @@
 			},
 			success: function (response) {
 				try {
-					console.log(response);
-					var json = JSON.parse(response);
-					if (json.statuscode == 200) {
-					
-						callSweetMsg(json, "Covid Vaccine System", "success");
+					if (response.status == 200) {
+						callSweetMsg("Account Created", "Covid Vaccine System", "success");
 						hideForms();
 						navigatePins();
 						$("#kt_sign_up_form").hide();
@@ -337,7 +334,7 @@
 							// $.unblockUI();
 						// window.location.href = "user.html" + "?" + $.param(ret);
 					} else {
-						callSweetMsg(json, "Covid Vaccine System", "error");
+						callSweetMsg("Error", "Covid Vaccine System", "error");
 						$("#kt_sign_up_submit").html("Processing...");
 					}
 				} catch (e) {
