--- a/login.html
+++ b/login.html
@@ -206,6 +206,7 @@
 								// var json = JSON.parse(response);
 								// console.log(json);
 								// var page = json.data.page;
+								let tokenn = response.token;
 								if (response.status == 200) {
 									var ret = {
 										token: response.token,
