landing page fixed plus function to view passed test result added

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     
                         <!-- Intro One Course Start -->
                         <div class="col max-mb-40 d-flex justify-content-center max-mt-20 " data-aos="fade-up">
-                            <img src="/landing/assets/Object.png" width="80%" alt="">
+                            <img src="./landing/assets/Object.png" width="80%" alt="">
                         </div>
                         <!-- Intro One Course End -->
                     </div>
